App-Code/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: talent-assessment-service
  labels:
    app: talent-assessment-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: talent-assessment-app
